Don't clear the net predictors prefs on startup

Traditionally, the net predictor had its database cleared from preferences
during startup, deleting them while transfering to a completely in-memory
representation.

This is non-ideal for Android, where unclean shutdowns are more common due
to oom-killer.

This patch removes the behavior in favor of clearing the prefs when the user
clears browsing history. Note that in order to properly persist db updates
in the presence of unclean shutdowns, we will have to sync the prefs more
often. This will be implemented as a follow up.

BUG=621604

Review-Url: https://codereview.chromium.org/2085643002
Cr-Commit-Position: refs/heads/master@{#402813}

Former-commit-id: f2113bc361ed6ad09f2e97ef5068be4e8c32e114