chrome/browser/chrome_net_benchmarking_message_filter.h
@@ -25,6 +25,9 @@ class ChromeNetBenchmarkingMessageFilter
 
   // content::BrowserMessageFilter methods:
   bool OnMessageReceived(const IPC::Message& message) override;
+  void OverrideThreadForMessage(const IPC::Message& message,
+                                content::BrowserThread::ID* thread) override;
+
 
  private:
   ~ChromeNetBenchmarkingMessageFilter() override;
@@ -41,6 +44,7 @@ class ChromeNetBenchmarkingMessageFilter
 
   // The Profile associated with our renderer process.  This should only be
   // accessed on the UI thread!
+  // TODO(623967): Store the Predictor* here instead of the Profile.
   Profile* profile_;
   scoped_refptr<net::URLRequestContextGetter> request_context_;
 
